# Sargassum-Model

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
config/: model_config.yaml
data/raw/: miami_data_cache.json
outputs/: results.json
scripts/: smoke_test.py
src/sargassum_model/: __init__.py  config.py  data_sources.py  economics.py  modes.py  optimizer.py  process_model.py  pyrolysis_model.py  run_model.py  units.py  validation.py  visualization.py
