[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sargassum-model"
version = "0.1.0"
description = "Interactive sargassum to methane techno-economic model"
requires-python = ">=3.9"
dependencies = [
  "numpy==2.2.6",
  "pandas==2.3.2",
  "scipy==1.15.2",
  "pyyaml==6.0.3",
  "requests==2.32.5",
  "urllib3==1.26.20",
  "plotly==6.5.2",
  "streamlit==1.50.0",
]

